src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans',
    'Droid Sans', 'Helvetica Neue', sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
}

nav {
  background-color: #927b7c;
  margin: 0 5px 0 5px;
  width: unset;
}
.names {
  background-color: aqua;
}
.collection .collection-item {
  border-bottom: unset;
}
.row {
  /* margin: 0 5px 20px 5px; */
}

